Added Switch Module

--- a/Lab3/ST7735.build_log.htm
+++ b/Lab3/ST7735.build_log.htm
@@ -7,3 +7,18 @@ C:\Users\lenalim\Documents\ValvanoWareTM4C123\Lab-3\Lab3\ST7735.uvproj
 Project File Date:  09/06/2016
 
 <h2>Output:</h2>
+Rebuild target 'ST7735'
+assembling startup.s...
+compiling PLL.c...
+compiling ST7735.c...
+compiling ST7735TestMain.c...
+compiling fixed.c...
+compiling Switch.c...
+Boolean.h(3): warning:  #1-D: last line of file ends without a newline
+  #define false 0
+Switch.c: 1 warning, 0 errors
+linking...
+Program Size: Code=5064 RO-data=14920 RW-data=44 ZI-data=1028  
+".\ST7735.axf" - 0 Error(s), 1 Warning(s).
+data=14920 RW-data=44 ZI-data=1028  
+".\ST7735.axf" - 0 Error(s), 2 Warning(s).
