--- a/Lab3/ST7735.build_log.htm
+++ b/Lab3/ST7735.build_log.htm
@@ -14,11 +14,16 @@ compiling ST7735.c...
 compiling ST7735TestMain.c...
 compiling fixed.c...
 compiling Switch.c...
-Boolean.h(3): warning:  #1-D: last line of file ends without a newline
-  #define false 0
-Switch.c: 1 warning, 0 errors
+compiling Speaker.c...
 linking...
 Program Size: Code=5064 RO-data=14920 RW-data=44 ZI-data=1028  
-".\ST7735.axf" - 0 Error(s), 1 Warning(s).
-data=14920 RW-data=44 ZI-data=1028  
+".\ST7735.axf" - 0 Error(s), 0 Warning(s).
+h(4): warning:  #1-D: last line of file ends without a newline
+        
+Speaker.c: 1 warning, 0 errors
+linking...
+Program Size: Code=5064 RO-data=14920 RW-data=44 ZI-data=1028  
 ".\ST7735.axf" - 0 Error(s), 2 Warning(s).
+), 2 Warning(s).
+a=14920 RW-data=44 ZI-data=1028  
+".\ST7735.axf" - 0 Error(s), 3 Warning(s).
